# cargo-scaffold

./: .gitignore  .scaffold.toml  Cargo.toml  README.md  rust-toolchain.toml
examples/: .scaffold.toml  do_not_template_this.txt  libusage.rs
src/: git.rs  helpers.rs  lib.rs  main.rs
