[package]
name = "cargo-scaffold"
version = "0.5.0"
authors = ["Benjamin Coenen <5719034+bnjjj@users.noreply.github.com>"]
edition = "2021"
description = "cargo scaffold lets you scaffold and generate an entire stack based on a simple toml file and make templating into your templates"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/iomentum/cargo-scaffold"
keywords = ["scaffold", "generate", "cargo", "templating"]

[dependencies]
cargo = "0.61"
anyhow = "1.0.32"
clap = "2.33.3" 
serde = { version = "1.0.115", features = ["derive"] }
dialoguer = "0.6.2"
handlebars = "4.2"
walkdir = "2.3.1"
toml = "0.5.6"
git2 = "0.14"
md5 = "0.7.0"
handlebars_misc_helpers = "0.12"
indicatif = "0.15.0"
console = "0.12.0"
globset = "0.4.5"
shell-words = "1.0"
structopt = "0.3"
buildstructor = "0.2.0"

[[bin]]
path = "src/main.rs"
name = "cargo-scaffold"
