[package]
name = "cargo-scaffold"
version = "0.8.14"
authors = ["Benjamin Coenen <5719034+bnjjj@users.noreply.github.com>"]
edition = "2021"
description = "Scaffold and generate an entire stack using a simple toml config file and 'handlebars' templates."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/iomentum/cargo-scaffold"
keywords = ["scaffold", "generate", "cargo", "templating"]

[dependencies]
anyhow = "1.0"
auth-git2 = "0.5"
clap = { version = "4.4", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
dialoguer = "0.11"
handlebars = "4.5"
walkdir = "2.4"
toml = "0.8"
git2 = { version = "0.17", features = ["vendored-openssl"] }
md5 = "0.7"
handlebars_misc_helpers = { version = "0.12", default-features = false, features = ["string", "http_attohttpc", "json"], optional = true }
indicatif = "0.17"
console = "0.15"
globset = "0.4"
shell-words = "1.0"

[[bin]]
path = "src/main.rs"
name = "cargo-scaffold"

[features]
default = ["helpers"]
helpers = ["handlebars_misc_helpers"]

[dev-dependencies]
tempfile = "3.8"
